logs/jsonwidget.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SimpleParse-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonwidget'...
Compiling './lib/python3.5/site-packages/jsonwidget/commands.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/commands.py", line 55
    print schemaobj.dumps()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonwidget/floatedit.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/floatedit.py", line 193
    def render(self,(maxcol,), focus=False):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonwidget/jsonnode.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/jsonnode.py", line 349
    print self.schemanode.get_title()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonwidget/jsonorder.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/jsonorder.py", line 134
    print "Original JSON: ", foo
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsonwidget/pinot.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/pinot.py", line 99
    print self.endstatusmessage,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jsonwidget/schema'...
Listing './lib/python3.5/site-packages/jsonwidget/schema/desktopcouch'...
Listing './lib/python3.5/site-packages/jsonwidget/schema/v2'...
Listing './lib/python3.5/site-packages/jsonwidget/schema/v2/desktopcouch'...
Compiling './lib/python3.5/site-packages/jsonwidget/schema.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/schema.py", line 124
    except KeyError, AttributeError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonwidget/server'...
Compiling './lib/python3.5/site-packages/jsonwidget/server/wsgieditserver.py'...
***   File "./lib/python3.5/site-packages/jsonwidget/server/wsgieditserver.py", line 117
    print "Serving on port %i.  See http://localhost:%i/" % (port, port)
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonwidget-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpleparse'...
Listing './lib/python3.5/site-packages/simpleparse/common'...
Listing './lib/python3.5/site-packages/simpleparse/stt'...
Listing './lib/python3.5/site-packages/simpleparse/stt/TextTools'...
Listing './lib/python3.5/site-packages/simpleparse/stt/TextTools/Constants'...
Listing './lib/python3.5/site-packages/simpleparse/stt/TextTools/mxTextTools'...
Listing './lib/python3.5/site-packages/simpleparse/xmlparser'...
Listing './share'...
Listing './share/python-wheels'...
